logs/dag_id=Air_pollution_data_pipeline/run_id=manual__2024-06-19T20:04:56+00:00/task_id=create_table/attempt=4.log
[2024-06-19T20:11:37.757+0000] {local_task_job_runner.py:120} INFO - ::group::Pre task execution logs
[2024-06-19T20:11:37.806+0000] {taskinstance.py:2076} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: Air_pollution_data_pipeline.create_table manual__2024-06-19T20:04:56+00:00 [queued]>
[2024-06-19T20:11:37.821+0000] {taskinstance.py:2076} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: Air_pollution_data_pipeline.create_table manual__2024-06-19T20:04:56+00:00 [queued]>
[2024-06-19T20:11:37.821+0000] {taskinstance.py:2306} INFO - Starting attempt 4 of 6
[2024-06-19T20:11:37.988+0000] {taskinstance.py:2330} INFO - Executing <Task(_PythonDecoratedOperator): create_table> on 2024-06-19 20:04:56+00:00
[2024-06-19T20:11:38.011+0000] {standard_task_runner.py:63} INFO - Started process 601 to run task
[2024-06-19T20:11:38.026+0000] {standard_task_runner.py:90} INFO - Running: ['***', 'tasks', 'run', 'Air_pollution_data_pipeline', 'create_table', 'manual__2024-06-19T20:04:56+00:00', '--job-id', '57', '--raw', '--subdir', 'DAGS_FOLDER/main.py', '--cfg-path', '/tmp/tmpi3x_cju_']
[2024-06-19T20:11:38.030+0000] {standard_task_runner.py:91} INFO - Job 57: Subtask create_table
[2024-06-19T20:11:38.161+0000] {task_command.py:426} INFO - Running <TaskInstance: Air_pollution_data_pipeline.create_table manual__2024-06-19T20:04:56+00:00 [running]> on host 0bfb368fa6be
[2024-06-19T20:11:38.388+0000] {taskinstance.py:2648} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='khalid' AIRFLOW_CTX_DAG_ID='Air_pollution_data_pipeline' AIRFLOW_CTX_TASK_ID='create_table' AIRFLOW_CTX_EXECUTION_DATE='2024-06-19T20:04:56+00:00' AIRFLOW_CTX_TRY_NUMBER='4' AIRFLOW_CTX_DAG_RUN_ID='manual__2024-06-19T20:04:56+00:00'
[2024-06-19T20:11:38.390+0000] {taskinstance.py:430} INFO - ::endgroup::
[2024-06-19T20:11:38.391+0000] {create_table.py:71} INFO - creating table
[2024-06-19T20:11:38.393+0000] {baseoperator.py:400} WARNING - SQLExecuteQueryOperator.execute cannot be called outside TaskInstance!
[2024-06-19T20:11:38.394+0000] {sql.py:276} INFO - Executing: 
        CREATE TABLE IF NOT EXISTS emission (
            `Entity` VARCHAR(100),
            `Code` VARCHAR(100),
            `Year` INT,
            `Nitrogen_oxide_NOx` FLOAT, 
            `Sulphur_dioxide_SO_emissions` FLOAT, 
            `Carbon_monoxide_CO_emissions` FLOAT, 
            `Organic_carbon_OC_emissions` FLOAT, 
            `Non_methane_volatile_organic_compounds_NMVOC_emissions` FLOAT, 
            `Black_carbon_BC_emissions` FLOAT,
            `Ammonia_NH_emissions` FLOAT
        );

[2024-06-19T20:11:38.430+0000] {base.py:84} INFO - Using connection ID 'postgres_localhost' for task execution.
[2024-06-19T20:11:38.478+0000] {base.py:84} INFO - Using connection ID 'postgres_localhost' for task execution.
[2024-06-19T20:11:38.489+0000] {sql.py:487} INFO - Running statement: 
        CREATE TABLE IF NOT EXISTS emission (
            `Entity` VARCHAR(100),
            `Code` VARCHAR(100),
            `Year` INT,
            `Nitrogen_oxide_NOx` FLOAT, 
            `Sulphur_dioxide_SO_emissions` FLOAT, 
            `Carbon_monoxide_CO_emissions` FLOAT, 
            `Organic_carbon_OC_emissions` FLOAT, 
            `Non_methane_volatile_organic_compounds_NMVOC_emissions` FLOAT, 
            `Black_carbon_BC_emissions` FLOAT,
            `Ammonia_NH_emissions` FLOAT
        );
, parameters: None
[2024-06-19T20:11:38.490+0000] {create_table.py:82} ERROR - Error creating table
Traceback (most recent call last):
  File "/opt/airflow/dags/database/create_table.py", line 77, in create_table
    create_table_task.execute(context=None)  # Execute the task
  File "/home/airflow/.local/lib/python3.10/site-packages/airflow/models/baseoperator.py", line 401, in wrapper
    return func(self, *args, **kwargs)
  File "/home/airflow/.local/lib/python3.10/site-packages/airflow/providers/common/sql/operators/sql.py", line 282, in execute
    output = hook.run(
  File "/home/airflow/.local/lib/python3.10/site-packages/airflow/providers/common/sql/hooks/sql.py", line 435, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.10/site-packages/airflow/providers/common/sql/hooks/sql.py", line 492, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near "`"
LINE 3:             `Entity` VARCHAR(100),
                    ^

[2024-06-19T20:11:38.493+0000] {taskinstance.py:441} INFO - ::group::Post task execution logs
[2024-06-19T20:11:38.503+0000] {taskinstance.py:2905} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.10/site-packages/airflow/models/taskinstance.py", line 465, in _execute_task
    result = _execute_callable(context=context, **execute_callable_kwargs)
  File "/home/airflow/.local/lib/python3.10/site-packages/airflow/models/taskinstance.py", line 432, in _execute_callable
    return execute_callable(context=context, **execute_callable_kwargs)
  File "/home/airflow/.local/lib/python3.10/site-packages/airflow/models/baseoperator.py", line 401, in wrapper
    return func(self, *args, **kwargs)
  File "/home/airflow/.local/lib/python3.10/site-packages/airflow/decorators/base.py", line 265, in execute
    return_value = super().execute(context)
  File "/home/airflow/.local/lib/python3.10/site-packages/airflow/models/baseoperator.py", line 401, in wrapper
    return func(self, *args, **kwargs)
  File "/home/airflow/.local/lib/python3.10/site-packages/airflow/operators/python.py", line 235, in execute
    return_value = self.execute_callable()
  File "/home/airflow/.local/lib/python3.10/site-packages/airflow/operators/python.py", line 252, in execute_callable
    return self.python_callable(*self.op_args, **self.op_kwargs)
  File "/opt/airflow/dags/database/create_table.py", line 77, in create_table
    create_table_task.execute(context=None)  # Execute the task
  File "/home/airflow/.local/lib/python3.10/site-packages/airflow/models/baseoperator.py", line 401, in wrapper
    return func(self, *args, **kwargs)
  File "/home/airflow/.local/lib/python3.10/site-packages/airflow/providers/common/sql/operators/sql.py", line 282, in execute
    output = hook.run(
  File "/home/airflow/.local/lib/python3.10/site-packages/airflow/providers/common/sql/hooks/sql.py", line 435, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.10/site-packages/airflow/providers/common/sql/hooks/sql.py", line 492, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near "`"
LINE 3:             `Entity` VARCHAR(100),
                    ^

[2024-06-19T20:11:38.525+0000] {taskinstance.py:1206} INFO - Marking task as UP_FOR_RETRY. dag_id=Air_pollution_data_pipeline, task_id=create_table, run_id=manual__2024-06-19T20:04:56+00:00, execution_date=20240619T200456, start_date=20240619T201137, end_date=20240619T201138
[2024-06-19T20:11:38.582+0000] {standard_task_runner.py:110} ERROR - Failed to execute job 57 for task create_table (syntax error at or near "`"
LINE 3:             `Entity` VARCHAR(100),
                    ^
; 601)
[2024-06-19T20:11:38.623+0000] {local_task_job_runner.py:240} INFO - Task exited with return code 1
[2024-06-19T20:11:38.719+0000] {taskinstance.py:3503} INFO - 0 downstream tasks scheduled from follow-on schedule check
[2024-06-19T20:11:38.722+0000] {local_task_job_runner.py:222} INFO - ::endgroup::
